[gd_scene load_steps=10 format=3 uid="uid://cejp7bpbfmkw"]

[ext_resource type="Script" uid="uid://btvo5nimkcrmi" path="res://gui/utility_menu.gd" id="1_db426"]
[ext_resource type="Material" uid="uid://dcq7n5qyt3hj0" path="res://materials/immaterial.tres" id="1_jr21q"]
[ext_resource type="PackedScene" uid="uid://dleye7m8gjxs0" path="res://gui/components/control_display_button.tscn" id="2_lco6t"]
[ext_resource type="Theme" uid="uid://cxq4wi2s4byf1" path="res://textures/gui/themes/custom_theme_alt.tres" id="3_v0p8v"]
[ext_resource type="Texture2D" uid="uid://bxhwtcxdgtkx6" path="res://textures/gui/keyboard_key.png" id="5_fubsc"]
[ext_resource type="PackedScene" uid="uid://blpc84uugpfvi" path="res://gui/party_display.tscn" id="6_f8scv"]

[sub_resource type="InputEventKey" id="InputEventKey_f8scv"]
device = -1
physical_keycode = 69
unicode = 101

[sub_resource type="InputEventJoypadButton" id="InputEventJoypadButton_4y04n"]
device = -1
button_index = 10
pressed = true

[sub_resource type="Shortcut" id="Shortcut_f8scv"]
events = [SubResource("InputEventKey_f8scv"), SubResource("InputEventJoypadButton_4y04n")]

[node name="UtilityMenu" type="Control"]
material = ExtResource("1_jr21q")
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_v0p8v")
script = ExtResource("1_db426")

[node name="MenuButton" parent="." instance=ExtResource("2_lco6t")]
unique_name_in_owner = true
use_parent_material = true
layout_mode = 0
offset_left = -80.0
offset_top = 1.0
offset_right = -36.0
offset_bottom = 48.0
size_flags_horizontal = 8
size_flags_vertical = 0
theme = ExtResource("3_v0p8v")
shortcut = SubResource("Shortcut_f8scv")
text = "‚Üê"
icon = ExtResource("5_fubsc")
input_action_name = "menu_right"

[node name="PartyDisplay" parent="." instance=ExtResource("6_f8scv")]
visible = false
layout_mode = 1
offset_left = -960.0
offset_right = -766.0
offset_bottom = 441.0

[node name="Info" type="VBoxContainer" parent="."]
unique_name_in_owner = true
visible = false
use_parent_material = true
layout_mode = 0
offset_top = 49.0
offset_right = 84.0
offset_bottom = 166.0
theme_override_constants/separation = 1

[node name="Party" type="Button" parent="Info"]
unique_name_in_owner = true
use_parent_material = true
layout_mode = 2
focus_neighbor_top = NodePath("../Pause")
focus_neighbor_bottom = NodePath("../Journal")
focus_next = NodePath("../Journal")
focus_previous = NodePath("../Pause")
theme_override_font_sizes/font_size = 16
text = "Party"

[node name="Journal" type="Button" parent="Info"]
unique_name_in_owner = true
use_parent_material = true
layout_mode = 2
focus_neighbor_top = NodePath("../Party")
focus_neighbor_bottom = NodePath("../Map")
focus_next = NodePath("../Map")
focus_previous = NodePath("../Party")
theme_override_font_sizes/font_size = 16
text = "Journal"

[node name="Map" type="Button" parent="Info"]
unique_name_in_owner = true
use_parent_material = true
layout_mode = 2
focus_neighbor_top = NodePath("../Journal")
focus_neighbor_bottom = NodePath("../Inventory")
focus_next = NodePath("../Inventory")
focus_previous = NodePath("../Journal")
theme_override_font_sizes/font_size = 16
text = "Map"

[node name="Inventory" type="Button" parent="Info"]
unique_name_in_owner = true
use_parent_material = true
layout_mode = 2
focus_neighbor_top = NodePath("../Map")
focus_neighbor_bottom = NodePath("../Pause")
focus_next = NodePath("../Pause")
focus_previous = NodePath("../Map")
theme_override_font_sizes/font_size = 16
text = "Inventory"

[node name="Pause" type="Button" parent="Info"]
unique_name_in_owner = true
use_parent_material = true
layout_mode = 2
focus_neighbor_top = NodePath("../Inventory")
focus_neighbor_bottom = NodePath("../Party")
focus_next = NodePath("../Party")
focus_previous = NodePath("../Inventory")
theme_override_font_sizes/font_size = 16
text = "Pause"

[connection signal="closed" from="." to="PartyDisplay" method="close_menu"]
[connection signal="closed" from="." to="Info/Party" method="release_focus"]
[connection signal="closed" from="." to="Info/Journal" method="release_focus"]
[connection signal="closed" from="." to="Info/Map" method="release_focus"]
[connection signal="closed" from="." to="Info/Inventory" method="release_focus"]
[connection signal="pressed" from="MenuButton" to="." method="toggle_menu"]
[connection signal="closed" from="PartyDisplay" to="." method="focus_party"]
[connection signal="closed" from="PartyDisplay" to="Info" method="show"]
[connection signal="pressed" from="Info/Party" to="PartyDisplay" method="open_menu"]
[connection signal="pressed" from="Info/Party" to="Info" method="hide"]
[connection signal="pressed" from="Info/Journal" to="." method="journal_pressed"]
[connection signal="pressed" from="Info/Map" to="." method="map_pressed"]
[connection signal="pressed" from="Info/Inventory" to="." method="inventory_pressed"]
[connection signal="pressed" from="Info/Pause" to="." method="pause_pressed"]
